# web-todo

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  run_tests.sh
backend/include/: auth_service.h  database.h  httplib.h  todo_service.h
backend/src/: auth_service.cpp  database.cpp  main.cpp  simple_http_server.cpp  todo_service.cpp
backend/tests/: test_auth_service.cpp  test_database.cpp  test_framework.h  test_integration.cpp  test_main.cpp  test_todo_service.cpp
frontend/: Dockerfile  nginx.conf
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: AuthPage.tsx  Header.tsx  LoginForm.tsx  RegisterForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/contexts/: AuthContext.tsx
issues/1/: description.txt  update-content.txt
